# General_Function_Minimiser

./: CMakeLists.txt  FEEG6009_Optimiser.pyproject  README.md  build_ui.sh  constrained.cpp  constrained.h  constrained.py  constrained.ui  ga.cpp  ga.h  ga.py  ga.ui  globalfunctions.cpp  globalfunctions.h  linear.cpp  linear.h  linear.py  linear.ui  linear_search.cpp  linear_search.h  linear_search.ui  main.cpp  main_menu.cpp  main_menu.h  main_menu.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  manufacturing.cpp  manufacturing.h  manufacturing.py  manufacturing.ui  menu.cpp  menu.h  menu.py  menu.ui  multi_variable.cpp  multi_variable.h  multi_variable.ui  multiobjective.cpp  (+29 more)
Optimisers/Constrained/: ConstrainedAugmented.py  ConstrainedCombined.py  ConstrainedLagrange.py  ConstrainedPenaltyFixed.py  ConstrainedPenaltyFixedAny.py  ConstrainedPenaltyFixedEach.py  ConstrainedPenaltyVaryingDoC.py  ConstrainedPenaltyVaryingSL.py  ContrainedLagrange.py
Optimisers/ConstrainedOptimisation/: ConstrainedCombined.py  ConstrainedPenalty.py  ContrainedLagrange.py
Optimisers/GeneticAlgorithms/: GA Final Exam Crossover.py  GACrossover.py  GARoulette.py  GA_Combined.py  GA_Crossover.py  GA_Roulette.py
Optimisers/LinearSearch/: GoldenSection.py  InverseParabolicInterpolation.py  NewtonsMethodLinear.py
Optimisers/ManufacturingQuestion/: ManuPerf.py
Optimisers/MultiObjecive/: EigenvectorMethod.py  FuzzyLogic.py  ParetoDominance Table.py  ParetoDominance.py
Optimisers/MultiObjective/: EigenvectorMethod.py  FuzzyLogic.py  ParetoDominance.py  ParetoDominanceTable.py
Optimisers/MultiVariable/: BFGS.py  ConjugateGradient.py  HookeandJeeves.py  NewtonsMethodMulti.py  SteepestDescent.py
Optimisers/Multivariable/: BFGS.py  ConjugateGradient.py  HookandJeeves.py  NewtonsMethodMulti.py  SteepestDescent.py
Optimisers/MultivariableOptimisers/: BFGS.py  ConjugateGradient.py  HookandJeeves.py  NewtonsMethodMulti.py  SteepestDescent.py
Optimisers/WingQuestion/: WingQuestion.py
